service: add new api for sync ocpasswd and repository
