# services/api/docs/swagger.yaml
@@ -646,7 +646,7 @@ definitions:
         example: User for testing VPN access
         maxLength: 1024
         type: string
-      expireAt:
+      expire_at:
         example: "2025-12-31"
         type: string
       traffic_size:
@@ -663,6 +663,12 @@ definitions:
         - TotallyReceive
         example: MonthlyTransmit
         type: string
+      users:
+        items:
+          $ref: '#/definitions/user.Ocpasswd'
+        type: array
+    required:
+    - users
     type: object
   ocserv_user.UpdateOcservUserData:
     properties:
@@ -1681,7 +1687,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.OcservUser'
+              type: string
             type: array
         "400":
           description: Bad Request
